# sy-bi-comrad-template

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README-template.md  README.md  activate.sh  pyqt5ac.yml  setup.py  setup.sh  wizard.py
app/: main.py  pyproject.toml
be_bi_application_frame/: __init__.py  application_frame.py  main.py
be_bi_application_frame/demo/: data_source.py  papc_devices.py  papc_utils.py
be_bi_application_frame/dummy_model/: data_source.py  papc_devices.py
be_bi_application_frame/dummy_model/papc_setup/: papc_devices.py
be_bi_application_frame/models/: data_source.py
be_bi_application_frame/resources/: application_frame.ui  images_rc.py  ui_application_frame.py
be_bi_application_frame/resources/images/: images.qrc
be_bi_application_frame/tests/: conftest.py  test_application_frame.py  test_be_bi_application_frame.py  test_testing_setup.py
be_bi_application_frame/widgets/: application_frame.py
be_bi_pyqt_template/: __init__.py  __main__.py  constants.py  frame.py  main.py  pyqt5ac.yml
be_bi_pyqt_template/models/: biswref1_settings.py  data_source.py  models.py
be_bi_pyqt_template/resources/: example_widget.ui
be_bi_pyqt_template/widgets/: example_widget.py  main_widget.py
docs/source/: api.rst  conf.py  index.rst  usage.rst
sy_bi_comrad_template/: main.ui  pyproject.toml
sy_bi_pyqt_template/: __main__.py  constants.py  main.ui  pyqt5ac.yml
sy_bi_pyqt_template/models/: models.py
sy_bi_pyqt_template/widgets/: main_widget.py
tests/: conftest.py  test_application.py  test_example_application.py  test_testing_setup.py
(+8 files in other folders)
