[project]
name = "sy-bi-comrad-template"
version = "0.0.1"
dependencies = [ "comrad",]
description = "SY BI ComRAD Template"
[[project.maintainers]]
name = "Sara Zanzottera"
email = "sara.zanzottera@cern.ch"

[build-system]
requires = [ "comrad",]
build-backend = "comrad_package.builder"

[tool.comrad.package]
entrypoint = "main.ui"
arguments = "--window-plugin-config comrad.pls.show_bar=1"
